# HW2

./: .env.example  .gitignore  PLAN.md  PRD.md  README.md  TODO.md  main.py  main_display.py  pyproject.toml  test_bias.py
config/: rate_limits.json  setup.json
data/: topics.json
docs/: COST_TRACKING.md  PLAN.md  PRD.md  PRD_api_gatekeeper.md  PRD_context_engineering.md  PRD_judge_evaluation.md  PRD_logging_pipeline.md  PRD_process_management.md  PRD_rag_system.md  PRD_search_engine.md  PRD_session_management.md  PRD_skills.md  PROMPT_ENGINEERING_LOG.md  SAMPLE_DEBATE.md  TODO.md
notebooks/: results_analysis.ipynb
src/debate_simulator/: __main__.py
src/debate_simulator/agents/: __init__.py  base_agent.py  debater_agent.py  debater_helpers.py  judge_agent.py  judge_helpers.py  judge_prompts.py  repetition.py
src/debate_simulator/hooks/: __init__.py  lifecycle.py
src/debate_simulator/mixins/: __init__.py  logging_mixin.py  skill_registry_mixin.py  timeout_mixin.py
src/debate_simulator/models/: __init__.py  agent.py  config_models.py  debate.py
src/debate_simulator/sdk/: __init__.py  sdk.py
src/debate_simulator/services/: __init__.py  debate_engine.py  debater_service.py  engine_helpers.py  judge_service.py  scoring_service.py
src/debate_simulator/shared/: __init__.py  config.py  constants.py  gatekeeper.py  llm_client.py  process_manager.py  version.py
src/debate_simulator/skills/: __init__.py  base_skill.py  router_skill.py
tests/: conftest.py  test_bias.py
tests/integration/: test_debate_flow.py  test_logging_pipeline.py  test_sdk.py
(+67 files in other folders)
