[project]
name = "debate-simulator"
version = "1.00"
description = "Terminal SDK for AI court debate simulations."
readme = "README.md"
authors = [
    { name = "yosefshanaa", email = "yosefshanaa@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.9",
    "duckduckgo-search>=8.1.1",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "ruff>=0.15.13",
    "sentence-transformers>=5.5.0",
]

[project.scripts]
debate-simulator = "debate_simulator.__main__:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
omit = ["src/debate_simulator/__main__.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 85
